# FavePersonal

## Version 1.3

- Added Image and Video post format archive templates
- Gallery shortcodes with specified post ids now work properly in RSS feeds.
- Addressed bug in Bio Widget admin that would cause the favicon lookup to pause indefinitely when pressing enter in the URL field for a link.
- Updated Bio Widget link admin so that pressing enter when the "Add" button is focused triggers the "click" action on that button.
- Addressed bug with responsive resizing of captioned images in front end.
- WordPress 3.6 compatibility

## Version 1.2

- WordPress 3.5 compatibility
- Support for gallery shortcode with ID parameters
- Support for multiple galleries in a single page/post
- Support for swiping Left/Right to navigate galleries on touch devices
- New-style WP generated caption shortcodes work properly
- Updated Kuler API compatibliity
- Update the included Social plugin to version 2.6.1
- Update the included Post Formats Admin UI plugin to version 1.1
- Update the included CF Colors plugin to version 1.0.2
- Update the included CF Gallery JavaScript to version 1.1
- Minimum required WordPress version: 3.5

## Version 1.1

- Update the included Social plugin to version 2.5
- Update the included Post Formats Admin UI plugin to version 1.0.2
- When Social is disabled, still output comments imported via Social as expected.
- When Social is loaded as a plugin, still enable FavePersonal's Social filters
- Proper color for .comments-title when Social is disabled
- Add a filter to the WP_Query that populates the featured posts in the header
- Use new WordPress 3.4 syntax for various functions
- Update included Carrington Core to version 3.4
- Minimum required WordPress version: 3.4

## Version 1.0.1

- added CHANGELOG
- when colors are changed, throw an action so that cache plugins can respond accordingly
- compressed CSS output in HTML head
- added child theme CSS download feature