@@ -31,6 +31,14 @@ This file should be included in built css file when in production mode.
 	margin-left: 0px;
 }
 
+.excerpt.format-gallery .entry-content {
+	margin-bottom: .3em;
+}
+
+.excerpt.format-status .entry-content {
+	margin-bottom: .1em;
+}
+
 /* full page with no sidebar */
 .page-full {
 	padding: 0 140px;
@@ -851,9 +859,10 @@ article {
 	transition: all .5s ease-in-out;
 }
 .gallery-stage a.gallery-stage-nav-link {
+	height: 100%;
+	opacity: 0;
 	position: absolute;
 	top: 0;
-	height: 100%;
 	width: 75px;
 	z-index: 100;
 	-moz-transition: all .5s ease-in-out;
@@ -861,34 +870,37 @@ article {
 	-o-transition: all .5s ease-in-out;
 	transition: all .5s ease-in-out;
 }
+
+.gallery-stage:hover a.gallery-stage-nav-link {
+	opacity: 1;
+}
+
 .gallery-stage a.gallery-stage-nav-link div {
-	position: absolute;
-	padding: 1em 0;
-	margin-top: -1em;
-	width: 100%;
-	text-align:center;
-	font-size: 1em;
-	top:50%;
-	background-color: rgba(255,255,255,.75);
+	background: url(../img/gallery-sprite.png) no-repeat 0 0;
 	color: #333;
+	font-size: 1em;
+	height: 47px;
+	margin-top: -24px;
+	position: absolute;
+	text-indent: -10000px;
+	top:50%;
+	width: 47px;
 }
 .gallery-stage a.gallery-stage-nav-link.next-link {
-	right: -75px;
-}
-.gallery-stage:hover a.gallery-stage-nav-link.next-link {
 	right: 0;
 }
 .gallery-stage a.gallery-stage-nav-link.next-link div {
-	border-radius: 3px 0px 0px 3px;
+	background-position: -47px 0;
+	right: 0;
+}
+a.gallery-stage-nav-link.next-link:hover div {
+	background-position: -47px -47px;
 }
 .gallery-stage a.gallery-stage-nav-link.prev-link {
-	left: -75px;
-}
-.gallery-stage:hover a.gallery-stage-nav-link.prev-link {
 	left: 0;
 }
-.gallery-stage a.gallery-stage-nav-link.prev-link div {
-	border-radius: 0px 3px 3px 0px;
+a.gallery-stage-nav-link.prev-link:hover div{
+	background-position: 0 -47px;
 }
 
 .oldie .gallery-stage figcaption {
@@ -2370,6 +2382,11 @@ iPad (portrait)				768
 	.single .format-video .entry-content {
 		width: auto;
 		margin-right: 0;
+	}
+
+	.excerpt.format-status .entry-content,
+	.excerpt.format-gallery .entry-content {
+		margin-bottom: .3em;
 	}
 
 	/* entry meta */
